<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/overview_card_linear"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/overview_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_view_margin"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <TextView
            android:id="@+id/overview_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/card_view_margin"
            android:gravity="center"
            android:text="@string/rating_template"
            android:textColor="@color/colorTextMid"
            android:textSize="@dimen/overview_card_rating_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/overview_linear_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/overview_linear_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/card_view_margin"
                android:layout_marginStart="@dimen/card_view_margin"
                android:layout_marginTop="@dimen/overview_card_margin_top_one"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/overview_title_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_details_original_title"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorTextMid"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/overview_title_bottom_line"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/bottom_line_height"
                    android:background="@android:color/holo_red_light"
                    android:contentDescription="@string/app_name" />

            </LinearLayout>

            <TextView
                android:id="@+id/overview_original_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/card_view_margin"
                android:layout_marginStart="@dimen/card_view_margin"
                android:layout_marginTop="@dimen/card_view_margin"
                android:text="@string/movie_details_original_title"
                android:textColor="@color/colorTextDark"
                android:textSize="@dimen/overview_card_original_title_text_size"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:id="@+id/overview_linear_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/card_view_margin"
                android:layout_marginStart="@dimen/card_view_margin"
                android:layout_marginTop="@dimen/overview_card_margin_top_two"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/overview_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@color/colorAccent"
                    android:text="@string/movie_overview_header"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorTextMid"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/overview_header_bottom_line"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/bottom_line_height"
                    android:background="@android:color/holo_red_light"
                    android:contentDescription="@string/app_name" />

            </LinearLayout>

            <TextView
                android:id="@+id/overview_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_view_margin"
                android:text="@string/movie_overview_header"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorTextLight" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>

